--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -11,15 +11,15 @@ doc:
   commentsHeader:
     en: Comments
     de: Kommentare
-  editRestrictionTooltip_annonymousUser:
+  editRestrictionTooltip_anonymousUser:
     en: Log in in order to edit this document
     de: Melde dich an, um dieses Dokument zu bearbeiten
-  editRestrictionTooltip_openContribution:
-    en: Editing this document was disabled by a maintainer
-    de: Die Bearbeitung dieses Dokuments wurde von einem Maintainer deaktiviert
+  editRestrictionTooltip_protected:
+    en: This document cannot be edited because it is protected
+    de: Dieses Dokument kann nicht bearbeitet werden, da es geschützt ist
   editRestrictionTooltip_archive:
     en: This document cannot be edited because it is archived
-    de: Dieses Dokument kann nicht bearbeitet werden da es archiviert ist
+    de: Dieses Dokument kann nicht bearbeitet werden, da es archiviert ist
   editRestrictionTooltip_room:
     en: Editing this document is only allowed for the room owner
     de: Die Bearbeitung dieses Dokuments ist nur für den Raumbesitzer erlaubt
