EDU-1123 Streamline resource selector screen headlines

--- a/src/components/resource-selector/media-library/media-library-upload-screen.yml
+++ b/src/components/resource-selector/media-library/media-library-upload-screen.yml
@@ -1,7 +1,7 @@
 mediaLibraryUploadScreen:
   uploadHeadline:
-    en: Create media
-    de: Medien erstellen
+    en: File upload
+    de: Datei-Upload
   preprocessed:
     en: edited
     de: bearbeitet
