--- a/src/components/resource-selector/shared/resource-preview-screen.yml
+++ b/src/components/resource-selector/shared/resource-preview-screen.yml
@@ -2,6 +2,6 @@ resourcePreviewScreen:
   headline:
     en: File preview
     de: Datei-Vorschau
-  missing:
-    en: missing
-    de: fehtl
+  missingDataPlaceholder:
+    en: not provided
+    de: nicht angegeben
