EDU-1144 Add search bar on desktop header

--- a/src/components/registration-form.yml
+++ b/src/components/registration-form.yml
@@ -1,6 +1,6 @@
 registrationForm:
   register:
-    en: Register
+    en: Sign up
     de: Registrieren
   termsAndConditionsConfirmation:
     en: I have read the <0>terms and conditions</0> and agree to them.
