--- a/src/components/admin/admin-settings-tab.yml
+++ b/src/components/admin/admin-settings-tab.yml
@@ -1,7 +1,7 @@
 adminSettingsTab:
-  homepageInfoHeader:
-    en: Homepage info
-    de: Homepage-Info
+  announcementHeader:
+    en: Announcement
+    de: Benachrichtigung
   helpPageHeader:
     en: Help page
     de: Hilfe-Seite
