EDU-1142 Create accreditedAuthor role

--- a/src/components/admin/user-accounts-tab.yml
+++ b/src/components/admin/user-accounts-tab.yml
@@ -23,6 +23,9 @@ userAccountsTab:
   activeAccounts:
     en: Active accounts
     de: Aktive Konten
+  unconfirmedAccounts:
+    en: Unconfirmed accounts
+    de: Unbestätigte Konten
   externalAccounts:
     en: External accounts
     de: Externe Konten
