EDU-1148 Improve translations

--- a/src/components/pages/index.yml
+++ b/src/components/pages/index.yml
@@ -1,4 +1,4 @@
 index:
-  popularSearches:
-    en: Popular searches
-    de: Beliebte Suchbegriffe
+  recommendedSearches:
+    en: Recommended searches
+    de: Empfohlene Suchbegriffe
