--- a/src/components/admin/admin-settings-tab.yml
+++ b/src/components/admin/admin-settings-tab.yml
@@ -2,12 +2,24 @@ adminSettingsTab:
   announcementHeader:
     en: Global announcement
     de: Globale Ankündigung
+  announcementInfo:
+    en: This announcement is shown under the website header on all pages. Users can close it and it will only appear again when the text or type are changed.
+    de: This announcement is shown under the website header on all pages. Users can close it and it will only appear again when the text or type are changed.
   consentHeader:
     en: Consent text
     de: Zustimmungstext
   homepageDocumentsHeader:
     en: Homepage documents pool
     de: Homepage-Dokumente-Becken ))
+  homepageDocumentsInfo:
+    en: 3 Documents from this list are randomly selected and displayed on the homepage.
+    de: 3 Documents from this list are randomly selected and displayed on the homepage.
+  homepageTagsHeader:
+    en: Homepage recommended tags
+    de: Homepage empfohlene Tags
+  homepageTagsInfo:
+    en: These tags appear as recommended searched on the homepage. When they are not set, the top 5 most used tags are recommended.
+    de: These tags appear as recommended searched on the homepage. When they are not set, the top 5 most used tags are recommended.
   helpPageHeader:
     en: Help page
     de: Hilfe-Seite
