EDU-1149 Introduce presentation components and better separate educandu from OMA

--- a/src/components/home-page/home-page-document-cards.yml
+++ b/src/components/home-page/home-page-document-cards.yml
@@ -1,7 +1,7 @@
-homepageDocumentCards:
-  popularDocuments:
+homePageDocumentCards:
+  headline:
     en: Popular documents
     de: Popular documents
-  contributionsBy:
+  tooltipPrefix:
     en: Contributions by
     de: Contributions by
