EDU-1149 Support navigating to homepage documents

--- a/src/components/home-page/home-page-document-cards.yml
+++ b/src/components/home-page/home-page-document-cards.yml
@@ -2,6 +2,6 @@ homePageDocumentCards:
   headline:
     en: Popular documents
     de: Popular documents
-  tooltipPrefix:
+  contributorsTooltipPrefix:
     en: Contributions by
     de: Contributions by
