EDU-1149 Rename home-page to homepage

--- a/src/components/homepage/homepage-oer-presentation.yml
+++ b/src/components/homepage/homepage-oer-presentation.yml
@@ -1,4 +1,4 @@
-homePageOerPresentation:
+homepageOerPresentation:
   headline:
     en: Become part of the OER community!
     de: Werde Teil der OER-Community!
