EDU-1149 Correct translations and illustration placing

--- a/src/components/homepage/homepage-project-presentation.yml
+++ b/src/components/homepage/homepage-project-presentation.yml
@@ -1,11 +1,11 @@
 homepageProjectPresentation:
   descriptionMarkdown:
     en: |
-      **Educandu** is an open platform for learning and teaching.
+      **Educandu** is the open platform for learning and teaching.
       And everyone can contribute and make their knowledge availabe as open educational resources (OER) under a Creative Commons license.
       Simple, intuitive and free, with features developed specifically for teaching:
     de: |
-      **Educandu**, ist eine Platform für digitales lernen und unerrichten.
+      **Educandu**, ist die Platform für digitales Lernen und Unerrichten.
       Und jeder kann mitmachen und kann seine Wissen als Open Educational Resource (OER) unter einer Creative Commons Lizenz zur Verfügung stellen.
       Einfach, intuitiv und kostenlos mit speziell für unerrichten entwickelten Features:
   mediaFeature:
