EDU-1149 Correct typos and add missing translations

--- a/src/components/homepage/homepage-document-cards.yml
+++ b/src/components/homepage/homepage-document-cards.yml
@@ -1,7 +1,7 @@
 homepageDocumentCards:
   headline:
     en: Popular documents
-    de: Popular documents
+    de: Beliebte Dokumente
   contributorsTooltipPrefix:
     en: Contributions by
-    de: Contributions by
+    de: Beiträge von
