--- a/src/components/homepage/homepage-oer-presentation.yml
+++ b/src/components/homepage/homepage-oer-presentation.yml
@@ -8,10 +8,10 @@ homepageOerPresentation:
       If you are inspired by the idea of free learning and of an open learning platform, then join our community for **free**.
     de: |
       Unser Ziel ist, ein Gemeinschaftsprojekt zu schaffen, das von möglichst vielen Menschen auf der ganzen Welt getragen und unterstützt wird.
-      Wenn du von der Idee des kostenlosen lernens und einer offenen Lernplattform begeistert bist uns selbst Inhalte generieren möchtest, trit unserer Community **kostenlos** bei.
+      Wenn du von der Idee des kostenlosen Lernens und einer offenen Lernplattform begeistert bist und selbst Inhalte generieren möchtest, tritt unserer Community **kostenlos** bei.
   signUp:
     en: Sign up for your free account
-    de: Melde dich für dein kostenloses Konto an
+    de: Registriere dich für dein kostenloses Konto
   logIn:
     en: Already have an account? Log in
     de: Du hast schon ein Konto? Anmelden
