--- a/src/components/homepage/homepage-project-presentation.yml
+++ b/src/components/homepage/homepage-project-presentation.yml
@@ -5,15 +5,15 @@ homepageProjectPresentation:
       And everyone can contribute and make their knowledge availabe as open educational resources (OER) under a Creative Commons license.
       Simple, intuitive and free, with features developed specifically for teaching:
     de: |
-      **Educandu**, ist die Platform für digitales Lernen und Unerrichten.
-      Und jeder kann mitmachen und kann seine Wissen als Open Educational Resource (OER) unter einer Creative Commons Lizenz zur Verfügung stellen.
-      Einfach, intuitiv und kostenlos mit speziell für unerrichten entwickelten Features:
+      **Educandu** ist die Platform für digitales Lernen und Unerrichten.
+      Und jeder kann mitmachen und kann sein Wissen als Open Educational Resource (OER) unter einer Creative Commons Lizenz zur Verfügung stellen.
+      Einfach, intuitiv und kostenlos, mit speziell für das Unterrichten entwickelten Features:
   mediaFeature:
     en: Video and audio with interactive options
     de: Video und Audio mit interaktiven Möglichkeiten
   earTrainingFeature:
     en: Online ear training tasks
-    de: Online Gehörbildungsaufgaben
+    de: Online-Gehörbildungsaufgaben
   multitrackFeature:
     en: Multitrack music player
     de: Mehrspur-Musikplayer
@@ -25,7 +25,7 @@ homepageProjectPresentation:
     de: Musik- und Filmanalysetool
   textFeature:
     en: Easy text editing and formatting
-    de: Einfache Texteingabe und- formatierung
+    de: Einfache Texteingabe und -formatierung
   imageFeature:
     en: Images, galleries and slideshows
     de: Bilder, Galerien und Slideshows
