EDU-1149 Reduce CTA text

--- a/src/components/homepage/homepage-oer-presentation.yml
+++ b/src/components/homepage/homepage-oer-presentation.yml
@@ -11,7 +11,7 @@ homepageOerPresentation:
       Wenn du von der Idee des kostenlosen Lernens und einer offenen Lernplattform begeistert bist und selbst Inhalte generieren möchtest, tritt unserer Community **kostenlos** bei.
   signUp:
     en: Sign up for your free account
-    de: Registriere dich für dein kostenloses Konto
+    de: Jetzt kostenlos registrieren
   logIn:
     en: Already have an account? Log in
     de: Du hast schon ein Konto? Anmelden
