EDU-1178 Create notifications tab on user dashboard

--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -11,6 +11,9 @@ dashboard:
   roomsTabTitle:
     en: Rooms
     de: Räume
+  notificationsTabTitle:
+    en: Notifications
+    de: Benachrichtigungen
   storageTabTitle:
     en: Your storage plan
     de: Dein Speicherplan
