--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "classnames": "^2.3.2",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "croner": "^6.0.0",
     "cropperjs": "^1.5.13",
     "crypto-js": "^4.1.1",
     "debounce": "^1.2.1",
