EDU-1183 Reuse adjusted control panel icons for notifications

--- a/src/components/dashboard/notifications-tab.yml
+++ b/src/components/dashboard/notifications-tab.yml
@@ -20,6 +20,9 @@ notificationsTab:
   documentNotAvailable:
     en: Document no longer available
     de: Document no longer available
+  dismiss:
+    en: Dismiss
+    de: Verwerfen
   dismissAll:
     en: Dismiss all
-    de: Alle entfernen
+    de: Alle verwerfen
