--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -555,3 +555,9 @@ common:
   removeAll:
     en: Remove all
     de: Alle löschen
+  notifications:
+    en: Notifications
+    de: Benachrichtigungen
+  unreadNotifications:
+    en: "You {count, plural, =0 {don't have unread notifications} =1 {have # unread notification} other {have # unread notifications}}"
+    de: "Du hast {count, plural, =0 {keine ungelesenen Benachrichtigungen} =1 {# ungelesene Benachrichtigung} other {# ungelesene Benachrichtigungen}}"
