--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -558,6 +558,6 @@ common:
   notifications:
     en: Notifications
     de: Benachrichtigungen
-  unreadNotifications:
-    en: "You {count, plural, =0 {don't have unread notifications} =1 {have # unread notification} other {have # unread notifications}}"
-    de: "Du hast {count, plural, =0 {keine ungelesenen Benachrichtigungen} =1 {# ungelesene Benachrichtigung} other {# ungelesene Benachrichtigungen}}"
+  notificationsTooltip:
+    en: "You {count, plural, =0 {don't have any notifications} =1 {have # notification} other {have # notifications}}"
+    de: "Du hast {count, plural, =0 {keine Benachrichtigungen} =1 {# Benachrichtigung} other {# Benachrichtigungen}}"
