EDU-1183 Support notifications removal

--- a/src/components/dashboard/notifications-tab.yml
+++ b/src/components/dashboard/notifications-tab.yml
@@ -4,7 +4,7 @@ notificationsTab:
     de: Hier findest du deine Benachrichtigungen.
   noNotifications:
     en: There are no new notifications for you.
-    de: Es gibt keine neue Benachrichtigungen für dich.
+    de: Es gibt keine neuen Benachrichtigungen für dich.
   publicRevisionCreatedNotification:
     en: Public document has been edited
     de: Öffentliches Dokument wurde bearbeitet
@@ -20,9 +20,9 @@ notificationsTab:
   documentNotAvailable:
     en: Document no longer available
     de: Document no longer available
-  dismiss:
-    en: Dismiss
-    de: Verwerfen
-  dismissAll:
-    en: Dismiss all
-    de: Alle verwerfen
+  remove:
+    en: Remove
+    de: Entfernen
+  removeAll:
+    en: Remove all
+    de: Alle entfernen
