--- a/src/components/dashboard/notifications-tab.yml
+++ b/src/components/dashboard/notifications-tab.yml
@@ -1,7 +1,7 @@
 notificationsTab:
   info:
-    en: Here you can find your notifications about contibutions to your favorite documents, by your favorite users or to documents in rooms that you are a member of.
-    de: Hier findest du deine Benachrichtigungen über Beiträge an deine Lieblingsdokumente, von deine Lieblingsnutzern oder an Dokumente in Räume, in denen du Mitglied bist.
+    en: Here you can find notifications about contibutions to your favorite documents, by your favorite users or to documents in rooms that you are a member of.
+    de: Hier findest du Benachrichtigungen über Beiträge zu deinen Lieblingsdokumenten, von deine Lieblingsnutzern, oder zu Dokumenten in Räumen, in denen du Mitglied bist.
   noNotifications:
     en: There are no new notifications for you.
     de: Es gibt keine neuen Benachrichtigungen für dich.
@@ -19,7 +19,7 @@ notificationsTab:
     de: Neuer Kommentar am Raum-Dokument
   documentNotAvailable:
     en: Document no longer available
-    de: Document no longer available
+    de: Dokument nicht mehr verfügbar
   remove:
     en: Remove
     de: Entfernen
