--- a/src/plugins/audio-waveform/audio-waveform.yml
+++ b/src/plugins/audio-waveform/audio-waveform.yml
@@ -2,24 +2,30 @@ audioWaveform:
   name:
     en: Audio waveform
     de: Audio-Wellenform
-  chooseImageDividerText:
-    en: Choose a ready-made image
-    de: Wähle ein vorgefertigtes Bild aus
-  generateImageDividerText:
-    en: or generate an image from an audio file
-    de: oder erstelle ein Bild aus einer Audio-Datei
-  generalSettingsDividerText:
-    en: General settings
-    de: Generelle Einstellungen
-  generateWaveformFromAudioFile:
-    en: Generate waveform from audio file
-    de: Wellenform aus Audio-Datei erstellen
+  waveformSourceTypeInfo:
+    en: Use an exiting waveform image or generate and upload one from an audio file
+    de: Use an exiting waveform image or generate and upload one from an audio file
+  waveformSourceType_image:
+    en: ready-made image
+    de: Vorgefertigtes Bild
+  waveformSourceType_audio:
+    en: audio file
+    de: Audio-Datei
+  imageUrl:
+    en: Image URL
+    de: Bild-URL
+  generateWaveformImage:
+    en: Generate waveform image
+    de: Wellenform-Bild erstellen
+  displayModeInfo:
+    en: In interactive mode, users are be able to hand-draw a waveform, and then compare with the uploaded image.
+    de: In interactive mode, users are be able to hand-draw a waveform, and then compare with the uploaded image.
   displayMode_static:
     en: static
-    de: statisch
+    de: Statisch
   displayMode_interactive:
     en: interactive
-    de: interaktiv
+    de: Interaktiv
   penColor:
     en: Waveform color
     de: Wellenformfarbe
@@ -32,24 +38,27 @@ audioWaveform:
   opacityWhenResolved:
     en: Opacity (resolved)
     de: Deckkraft (aufgelöst)
+  opacityWhenResolvedInfo:
+    en: The opacity of the hand-drawn waveform, when compared to the uploaded image.
+    de: The opacity of the hand-drawn waveform, when compared to the uploaded image.
   showResolution:
     en: Show resolution
     de: Auflösung anzeigen
   hideResolution:
     en: Hide resolution
     de: Auflösung ausblenden
-  dialogTitle:
-    en: Generate waveform image
-    de: Wellenform-Bild erstellen
-  dialogDropzoneInfo:
-    en: Drag an audio file into this box
-    de: Ziehe eine Audio-Datei in diese Box
-  dialogFilePickerButtonLabel:
-    en: Select an audio file
-    de: Audio-Datei auswählen
-  dialogLocalFilePickerButtonText:
-    en: from my machine
-    de: vom lokalen Computer
-  dialogCdnFilePickerButtonText:
-    en: from the internal storage
-    de: vom internen Speicher
+  dialogSearchFileInvitationHeader:
+    en: Search for audio file in all libraries
+    de: Audio-Datei in alle Bibliotheken suchen
+  dialogDropFileInvitationHeader:
+    en: Drag an audio file here
+    de: Ziehe eine Audio-Datei hierher
+  dialogGeneratedWafevormHeader:
+    en: Current waveform
+    de: Momentan generierte Wellenform
+  dialogRegenerateButton:
+    en: Regenerate
+    de: Erneut generieren
+  dialogOkText:
+    en: Generate and select
+    de: Erstellen und auswählen
