--- a/src/plugins/audio-waveform/audio-waveform.yml
+++ b/src/plugins/audio-waveform/audio-waveform.yml
@@ -2,21 +2,15 @@ audioWaveform:
   name:
     en: Audio waveform
     de: Audio-Wellenform
-  waveformSourceTypeInfo:
-    en: Use an exiting waveform image or generate and upload one from an audio file
-    de: Use an exiting waveform image or generate and upload one from an audio file
-  waveformSourceType_image:
-    en: ready-made image
-    de: Vorgefertigtes Bild
-  waveformSourceType_audio:
-    en: audio file
-    de: Audio-Datei
+  createImageLabelInfo:
+    en: Use an audio file to generate and upload the waveform image
+    de: Use an audio file to generate and upload the waveform image
+  createImageButton:
+    en: Generate image from audio file
+    de: Bild aus Audio-Datei erstellen
   imageUrl:
     en: Image URL
     de: Bild-URL
-  generateWaveformImage:
-    en: Generate waveform image
-    de: Wellenform-Bild erstellen
   displayModeInfo:
     en: In interactive mode, users are be able to hand-draw a waveform, and then compare with the uploaded image.
     de: In interactive mode, users are be able to hand-draw a waveform, and then compare with the uploaded image.
@@ -47,9 +41,12 @@ audioWaveform:
   hideResolution:
     en: Hide resolution
     de: Auflösung ausblenden
+  dialogTitle:
+    en: Generate waveform image
+    de: Wellenform-Bild erstellen
   dialogSearchFileInvitationHeader:
     en: Search for audio file in all libraries
-    de: Audio-Datei in alle Bibliotheken suchen
+    de: Audio-Datei in allen Bibliotheken suchen
   dialogDropFileInvitationHeader:
     en: Drag an audio file here
     de: Ziehe eine Audio-Datei hierher
@@ -57,8 +54,8 @@ audioWaveform:
     en: Current waveform
     de: Momentan generierte Wellenform
   dialogRegenerateButton:
-    en: Regenerate
-    de: Erneut generieren
+    en: Use a different audio file
+    de: Andere Audio-Datei verwenden
   dialogOkText:
     en: Generate and select
     de: Erstellen und auswählen
