--- a/src/plugins/audio-waveform/audio-waveform.yml
+++ b/src/plugins/audio-waveform/audio-waveform.yml
@@ -3,8 +3,8 @@ audioWaveform:
     en: Audio waveform
     de: Audio-Wellenform
   createImageLabelInfo:
-    en: Use an audio file to generate and upload the waveform image
-    de: Use an audio file to generate and upload the waveform image
+    en: Use an audio file to generate and upload the waveform image.
+    de: Verwende eine Audio-Datei, um ein Wellenform-Bild zu erstellen und hochzuladen.
   createImageButton:
     en: Generate image from audio file
     de: Bild aus Audio-Datei erstellen
@@ -12,8 +12,8 @@ audioWaveform:
     en: Image URL
     de: Bild-URL
   displayModeInfo:
-    en: In interactive mode, users are be able to hand-draw a waveform, and then compare with the uploaded image.
-    de: In interactive mode, users are be able to hand-draw a waveform, and then compare with the uploaded image.
+    en: In interactive mode, users are able to hand-draw a waveform, and then compare with the uploaded image.
+    de: Im interaktiven Modus können Benutzer eine Wellenform händisch zeichnen und mit dem hochgeladenen Bild vergleichen.
   displayMode_static:
     en: static
     de: Statisch
@@ -33,8 +33,8 @@ audioWaveform:
     en: Opacity (resolved)
     de: Deckkraft (aufgelöst)
   opacityWhenResolvedInfo:
-    en: The opacity of the hand-drawn waveform, when compared to the uploaded image.
-    de: The opacity of the hand-drawn waveform, when compared to the uploaded image.
+    en: The opacity of the hand-drawn waveform, when comparing to the uploaded image.
+    de: Die Deckkraft der händisch gezeichneten Wellenform beim Vergleich mit dem hochgeladenen Bild.
   showResolution:
     en: Show resolution
     de: Auflösung anzeigen
@@ -50,11 +50,8 @@ audioWaveform:
   dialogDropFileInvitationHeader:
     en: Drag an audio file here
     de: Ziehe eine Audio-Datei hierher
-  dialogGeneratedWafevormHeader:
-    en: Current waveform
-    de: Momentan generierte Wellenform
   dialogRegenerateButton:
-    en: Use a different audio file
+    en: Use different audio file
     de: Andere Audio-Datei verwenden
   dialogOkText:
     en: Generate and select
