EDU-1197 Bonus commit: Extend documents tab

--- a/src/components/pages/redaction.yml
+++ b/src/components/pages/redaction.yml
@@ -5,3 +5,6 @@ redaction:
   documentTagsTabTitle:
     en: Document tags
     de: Dokument-Tags
+  mediaLibraryTabTitle:
+    en: Media library
+    de: Medienbibliothek
