EDU-1197 Create new media library redaction tab

--- a/src/components/redaction/redaction-documents-tab.yml
+++ b/src/components/redaction/redaction-documents-tab.yml
@@ -1,10 +1,7 @@
 redactionDocumentsTab:
-  initialAuthor:
-    en: Initial author
-    de: Erstautor
   filterPlaceholder:
-    en: Filter by title or initial author
-    de: Nach Titel oder Erstautor filtern
+    en: Filter by title or creator
+    de: Nach Titel oder Ersteller filtern
   badges:
     en: Badges
     de: Kennzeichen
