EDU-1194 Re-baptizing plugin divider to separator

--- a/src/plugins/separator/separator.yml
+++ b/src/plugins/separator/separator.yml
@@ -1,7 +1,7 @@
-divider:
+separator:
   name:
-    en: Divider
-    de: Verteiler
+    en: Separator
+    de: Trennlinie
   titlePosition:
     en: Title position
     de: Titleposition
