EDU-1196 Set up or correct translations

--- a/src/components/admin/homepage-trust-logos-settings.yml
+++ b/src/components/admin/homepage-trust-logos-settings.yml
@@ -7,4 +7,4 @@ homepageTrustLogosSettings:
     de: Logo-URL
   institutionUrl:
     en: Institution URL
-    de: Institution-URL
+    de: Institutions-URL
