EDU-1204 Adjust resource-info-cell to provide dedicated info for subtext on case basis

--- a/src/components/pages/search.yml
+++ b/src/components/pages/search.yml
@@ -10,3 +10,9 @@ search:
   sorting:
     en: Sorting
     de: Sortierung
+  created:
+    en: Created
+    de: Erstellt
+  lastUpdate:
+    en: Last update
+    de: Letzte Änderung
