EDU-1195 Adjust table of contents plugin

--- a/src/plugins/table-of-contents/table-of-contents.yml
+++ b/src/plugins/table-of-contents/table-of-contents.yml
@@ -3,8 +3,8 @@ tableOfContents:
     en: Table of contents
     de: "Inhalts\u00ADverzeichnis"
   defaultTextMarkdown:
-    en: "# Table of contents"
-    de: "# Inhaltsverzeichnis"
+    en: "**Content**"
+    de: "**Inhalt**"
   levelRange:
     en: Level range
     de: Ebenen-Umfang
