EDU-1193 Change empty text depending on fiter being set or not

--- a/src/components/dashboard/rooms-tab.yml
+++ b/src/components/dashboard/rooms-tab.yml
@@ -29,3 +29,6 @@ roomsTab:
   noMemberRooms:
     en: You are currently not a member in any room. To become a member of a room, you need to be invited by the room owner.
     de: Du bist zur Zeit kein Mitglied eines Raumes. Um Mitglied in einem Raum zu werden, musst du vom Raum-Eigentümer eingeladen werden.
+  noMatchingRooms:
+    en: No matching rooms
+    de: Keine passende Räume
