EDU-1205 Change homepage documents headline

--- a/src/components/homepage/homepage-document-cards.yml
+++ b/src/components/homepage/homepage-document-cards.yml
@@ -1,7 +1,7 @@
 homepageDocumentCards:
   headline:
-    en: Popular documents
-    de: Beliebte Dokumente
+    en: Recommended documents
+    de: Empfohlene Dokumente
   contributorsTooltipPrefix:
     en: Contributions by
     de: Beiträge von
