EDU-1193 Correct the 'n' words

--- a/src/components/dashboard/rooms-tab.yml
+++ b/src/components/dashboard/rooms-tab.yml
@@ -31,4 +31,4 @@ roomsTab:
     de: Du bist zur Zeit kein Mitglied eines Raumes. Um Mitglied in einem Raum zu werden, musst du vom Raum-Eigentümer eingeladen werden.
   noMatchingRooms:
     en: No matching rooms
-    de: Keine passende Räume
+    de: Keine passenden Räume
