EDU-1208 Reduce label text length

--- a/src/plugins/ear-training/ear-training.yml
+++ b/src/plugins/ear-training/ear-training.yml
@@ -12,8 +12,8 @@ earTraining:
     en: Use MIDI (auto)
     de: MIDI benutzen (auto)
   testsOrder:
-    en: Display order
-    de: Anzeigereihenfolge
+    en: Order
+    de: Reihenfolge
   testsOrderGiven:
     en: as specified
     de: wie angegeben
