EDU-1215 Reduce clutter on room page title area

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -157,9 +157,9 @@ common:
   relevance:
     en: Relevance
     de: Relevanz
-  owner:
-    en: Owner
-    de: Eigentümer
+  by:
+    en: By
+    de: Von
   email:
     en: Email
     de: E-Mail
