EDU-1213 Let users preview, update and create items in redaction view

--- a/src/components/resource-selector/media-library/media-library-search-screen.yml
+++ b/src/components/resource-selector/media-library/media-library-search-screen.yml
@@ -1,6 +1,6 @@
 mediaLibrarySearchScreen:
   searchInvitationHeader:
-    en: Search in the Media library
+    en: Search in the media library
     de: Suche in der Medien-Bibliothek
   uploadFile:
     en: Upload file
