EDU-1215 Improve label translation

--- a/src/components/room-metadata-form.yml
+++ b/src/components/room-metadata-form.yml
@@ -2,9 +2,9 @@ roomMetadataForm:
   roomNameRequired:
     en: Please specify a room name
     de: Bitte gib einen Raumnamen an
-  isCollaborative:
-    en: Is collaborative
-    de: Ist kollaborativ
+  isCollaborativeLabel:
+    en: Collaborative mode
+    de: Kollaborativer Modus
   isCollaborativeInfo:
     en: In collaborative rooms all room members can add and modify documents, however only the owner can delete them.
     de: In kollaborativen Räumen können alle Raummitglieder Dokumente erstellen und bearbeiten, jedoch nur Besitzer können diese löschen.
