EDU-1214 Change display name for music-learning-block plugin

--- a/src/plugins/music-learning-block/music-learning-block.yml
+++ b/src/plugins/music-learning-block/music-learning-block.yml
@@ -1,7 +1,7 @@
 musicLearningBlock:
   name:
-    en: Learning block
-    de: Lern-Kasten
+    en: Accentuation
+    de: Hervorhebung
   type_assignment:
     en: Assignment
     de: Aufgabe
