--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -27,8 +27,8 @@ confirmationDialogs:
     en: Do you really want to revoke the room invitation sent to "{invitationEmail}"?
     de: Möchtest du die Raumeinladung für "{invitationEmail}" wirklich widerrufen?
   deleteRoomMessageConfirmation:
-    en: Do you really want to delete the message from "{timestamp}"?
-    de: Möchtest du die Nachricht von "{timestamp}" wirklich löschen?
+    en: Do you really want to delete the message posted on "{timestamp}"?
+    de: Möchtest du die Nachricht geschrieben am "{timestamp}" wirklich löschen?
   leaveRoomConfirmation:
     en: Do you really want to cancel your membership in room "{roomName}"?
     de: Möchtest du deine Mitgliedschaft im Raum "{roomName}" wirklich beenden?
